// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LEGACY createDisclosureRequest() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.cYVTTaObssUZlT68Viz_Zwo6s6lY1_AghVxCqCx-3zFL7t9m1bzqJJnVOWMgRBIX177attz_ahtAUbB9Fre4pgA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`authenticateDisclosureResponse() handles response with missing challenge 1`] = `[Error: Challenge was not included in response]`;

exports[`authenticateDisclosureResponse() returns profile mixing public and private claims 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Davie",
  "phone": "+15555551234",
}
`;

exports[`authenticateDisclosureResponse() returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Davie",
  "phone": "+15555551234",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.y7AK2CZkCfMNM0k2WqAl7X7gg5ieBRVYa3mrI3Wfsq3JkH7mOd4J2XT_7eI5GIL2-tIVpnqMWVzCrvNwRRkzQQE",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`authenticateDisclosureResponse() returns profile with only public claims 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Super Developer",
}
`;

exports[`authenticateDisclosureResponse() returns profile with private chain network id claims 1`] = `
Object {
  "address": "0x1626f7286ab8cc11e6ec91917dc7969621553fc6",
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "mnid": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "name": "Super Developer",
}
`;

exports[`authenticateDisclosureResponse() returns pushToken if available 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Super Developer",
  "pushToken": "PUSHTOKEN",
}
`;

exports[`configuration configNetworks if networks key is passed in it must contain configuration object 1`] = `"Network configuration object required"`;

exports[`configuration configNetworks should require a registry address 1`] = `"Malformed network config object, object must have 'registry' key specified."`;

exports[`configuration configNetworks should require a rpcUrl 1`] = `"Malformed network config object, object must have 'rpcUrl' key specified."`;

exports[`createDisclosureRequest() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.cYVTTaObssUZlT68Viz_Zwo6s6lY1_AghVxCqCx-3zFL7t9m1bzqJJnVOWMgRBIX177attz_ahtAUbB9Fre4pgA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.cYVTTaObssUZlT68Viz_Zwo6s6lY1_AghVxCqCx-3zFL7t9m1bzqJJnVOWMgRBIX177attz_ahtAUbB9Fre4pgA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ2ZXJpZmllZCI6WyJuYW1lIl0sInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.6-RDnTCbyStFDjRdG8SODqakNWqd-DOwDx-z0sefcwrlg3vDrRV8xSPenifbuhlLIRP3Km4dwCO89dqcMrnUYwA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJwZXJtaXNzaW9ucyI6WyJub3RpZmljYXRpb25zIl0sInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.90LFA1ITNFW_1We3o1vNoI333GD3mGj7Sa-8bDjk6Psw7oHhvQ5T528VB1aT3-2rlqsXGNA5Re8GXXgMqGNbwQE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJjYWxsYmFjayI6Imh0dHBzOi8vbXlzZXJ2ZXIuY29tIiwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.3v3WjKyeesI0BGP5-p6Pf-jszTBJKHN9fZeTljtXE2cVokiiXxkDeCGPdqMOI372XA1a_i0cV5rGVqe3w05S6gE",
  "payload": Object {
    "callback": "https://myserver.com",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting a specific networkId 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting a specific networkId 2`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting accountType of general 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywiYWN0IjoiZ2VuZXJhbCIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.CbFYYQCwh4Atv-8rpPNxwv9Sl70PTonaHzrXtsiZpUAio-TjJSyCN_Crc88pwIA6VmK-W8upJWbDLGukFT_JowA",
  "payload": Object {
    "act": "general",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting accountType of keypair 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywiYWN0Ijoia2V5cGFpciIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.A_jzzsb06OWAX5ajpVjVmzgSvfqGmGqKj2IjW0mAFehOlodlRy8IOm3QPw2BXJlPh4eFpsH0Pd4mTJQBG8VHNQE",
  "payload": Object {
    "act": "keypair",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting accountType of none 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywiYWN0Ijoibm9uZSIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.U0YCoW3EQZg05ntFAOdZNjgOHr1kShlx8MdaLzuwquSBueOQV1-MnX51x0zGAC4LdbptrBuRxtWsPtqU_VTaCgA",
  "payload": Object {
    "act": "none",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting accountType of segregated 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywiYWN0Ijoic2VncmVnYXRlZCIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.M4ZwLdD-FlGovbFycTIVTzO9uiypI2tyrDysMy1UcWJRJWyrUz4BApFZ7Xp0wz6-XO7suW7CyvKQD-vAk4kcDAA",
  "payload": Object {
    "act": "segregated",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() has correct payload in JWT requesting unsupported accountType 1`] = `[Error: Unsupported accountType gold]`;

exports[`createDisclosureRequest() ignores unsupported request parameters 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createDisclosureRequest() includes vc in payload 1`] = `Promise {}`;

exports[`createTypedDataSignatureRequest() creates a valid JWT for a typed data request 1`] = `"eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInR5cGVkRGF0YSI6eyJ0eXBlcyI6eyJFSVA3MTJEb21haW4iOlt7Im5hbWUiOiJuYW1lIiwidHlwZSI6InN0cmluZyJ9LHsibmFtZSI6InZlcnNpb24iLCJ0eXBlIjoic3RyaW5nIn0seyJuYW1lIjoiY2hhaW5JZCIsInR5cGUiOiJ1aW50MjU2In0seyJuYW1lIjoidmVyaWZ5aW5nQ29udHJhY3QiLCJ0eXBlIjoiYWRkcmVzcyJ9LHsibmFtZSI6InNhbHQiLCJ0eXBlIjoiYnl0ZXMzMiJ9XSwiR3JlZXRpbmciOlt7Im5hbWUiOiJ0ZXh0IiwidHlwZSI6InN0cmluZyJ9LHsibmFtZSI6InN1YmplY3QiLCJ0eXBlIjoic3RyaW5nIn1dfSwiZG9tYWluIjp7Im5hbWUiOiJNeSBkYXBwIiwidmVyc2lvbiI6IjEuMCIsImNoYWluSWQiOjEsInZlcmlmeWluZ0NvbnRyYWN0IjoiMHhkZWFkYmVlZiIsInNhbHQiOiIweDk5OTk5OTk5OTkxMDEwMTAxMDEwMTAxMCJ9LCJwcmltYXJ5VHlwZSI6IkdyZWV0aW5nIiwibWVzc2FnZSI6eyJ0ZXh0IjoiSGVsbG8iLCJzdWJqZWN0IjoiV29ybGQifX0sInN1YiI6ImRpZDpldGhyOmRlYWRiZWVmIiwiYXVkIjoiZGlkOmV0aHI6ZGVhZGJlZWYiLCJ0eXBlIjoiZWlwNzEyUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.sEzGk7g5IvtXEluNiFwp_Ad2i-7U3mdbrpW13OD4YIsPSVszX6kD-i5p5m10HeM7Ysf8WFRzq7dT8vf0kN8TBgE"`;

exports[`createVerification() has correct payload in JWT for an attestation 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6ImRpZDp1cG9ydDoyMjNhYjQ1IiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.BWI3w3f1kk9285cSNvtuL6UsUH0I_uidG4MfTbHM_2YdO9HE6-rQiJ1e-vbM9jmGRQKDzoq_PjVBzLbhp3G4FwE",
  "payload": Object {
    "claim": Object {
      "email": "bingbangbung@email.com",
    },
    "exp": 1485321134,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "sub": "did:uport:223ab45",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createVerificationSignatureRequest() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInVuc2lnbmVkQ2xhaW0iOnsiY2xhaW0iOnsidGVzdCI6eyJwcm9wMSI6MSwicHJvcDIiOjJ9fX0sInN1YiI6ImRpZDp1cG9ydDoyMjNhYjQ1IiwidHlwZSI6InZlclJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.jU2vU1PatmKB_M8zPvZNqSblKJqHCaGW1ngkiqnw1Xy83-_q1wtMUU-30gSSPWDQ1Gt6enNNXZFwRqM9lQMqngE",
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "sub": "did:uport:223ab45",
    "type": "verReq",
    "unsignedClaim": Object {
      "claim": Object {
        "test": Object {
          "prop1": 1,
          "prop2": 2,
        },
      },
    },
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`disclose() creates a valid JWT for a disclosure 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywib3duIjp7Im5hbWUiOiJCb2IifSwidHlwZSI6InNoYXJlUmVzcCIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.A0VSy1LzNNUr2sKSAse9M34zx4TuRBKYZ7ywtZ4yK_UdHcA9dKIzrh45kq8D0kk3Q2HPTxFr9a4t7J1vzPUK9QA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "own": Object {
      "name": "Bob",
    },
    "type": "shareResp",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`disclose() creates a valid JWT for a disclosure 2`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxIjoiZXlKMGVYQWlPaUpLVjFRaUxDSmhiR2NpT2lKRlV6STFOa3N0VWlKOS5leUpwWVhRaU9qRTBPRFV6TWpFeE16TXNJbVY0Y0NJNk1UUTROVE15TVRjek15d2lkSGx3WlNJNkluTm9ZWEpsVW1WeElpd2lhWE56SWpvaVpHbGtPbVYwYUhJNk1IaGlZek5oWlRVNVltTTNObVk0T1RRNE1qSTJNakpqWkdWbU4yRXlNREU0WkdKbE16VXpPRFF3SW4wLnB0VzdqUzVsemZjYldDZ2kzTTRNRDczZFJEVGJrZmw0djd3TV82WjhwYkJBblpRcFFZV0hVaG90Zm9Tc3ZZZHExYVFUS1ZnLURsYWNkcGJsLS10X1JnRSIsImF1ZCI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCIsInR5cGUiOiJzaGFyZVJlc3AiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.OKfpTWb1yNkw2h5ake9wHMO-lQChPtRMK29JZb3gEjcy9H5Yml-lrMRW6z-Wvnn4td9HB3As8fsVA9OJyive4wA",
  "payload": Object {
    "aud": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "req": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
    "type": "shareResp",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`txRequest() creates a valid JWT for a request 1`] = `
Object {
  "exp": 1485321733,
  "fn": "updateStatus(string \\"hello\\")",
  "iat": 1485321133,
  "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "to": "0x70A804cCE17149deB6030039798701a38667ca3B",
  "type": "ethtx",
}
`;

exports[`verifyDisclosure() returns profile mixing public and private claims 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Davie",
  "phone": "+15555551234",
}
`;

exports[`verifyDisclosure() returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Davie",
  "phone": "+15555551234",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.y7AK2CZkCfMNM0k2WqAl7X7gg5ieBRVYa3mrI3Wfsq3JkH7mOd4J2XT_7eI5GIL2-tIVpnqMWVzCrvNwRRkzQQE",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`verifyDisclosure() returns profile with only public claims 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Bob Smith",
}
`;

exports[`verifyDisclosure() returns profile with private chain network id claims 1`] = `
Object {
  "address": "0x1626f7286ab8cc11e6ec91917dc7969621553fc6",
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "mnid": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "name": "Bob Smith",
}
`;

exports[`verifyDisclosure() returns pushToken if available 1`] = `
Object {
  "boxPub": undefined,
  "country": "NI",
  "did": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "name": "Bob Smith",
  "pushToken": "PUSHTOKEN",
}
`;
